<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalQuiz"
    android:background="@drawable/final_bg">

    <TextView
        android:id="@+id/finalQuizTextViewCorrectAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/correct_answers"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:shadowColor="@color/gray50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalQuizTextViewScore" />

    <TextView
        android:id="@+id/finalQuizTextViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/final_score"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:shadowColor="@color/gray50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/finalQuizButtonPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/play_again_button"
        android:background="@drawable/bg_botao"
        android:textColor="@color/black"
        android:shadowColor="@color/gray50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/finalQuizTextViewFinalMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:shadowColor="@color/gray50"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        app:layout_constraintBottom_toTopOf="@+id/finalQuizButtonPlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalQuizTextViewCorrectAnswers" />

</androidx.constraintlayout.widget.ConstraintLayout>